# upid

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pr.yml  py.yml  release.yml  rust.yml
examples/python/: .mise.toml  README.md  example.py  pyproject.toml  requirements.txt
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
py/tests/: test_b32.py  test_core.py
py/upid/: __init__.py  __main__.py  b32.py  consts.py  core.py
upid_pg/: Cargo.toml  upid_pg.control
upid_pg/src/: lib.rs
upid_rs/: Cargo.toml
upid_rs/src/: b32.rs  lib.rs  main.rs  uuid.rs
