[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[project]
name = "upid"
description = "Universally Unique Prefixed Lexicographically Sortable Identifier"
authors = [
    { name = "Chris Arderne", email = "chris@rdrn.me" }
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.9"
keywords = ["UUID", "id", "database"]

dynamic = ["version"]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.urls]
homepage = "https://github.com/carderne/upid"
repository = "https://github.com/carderne/upid"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "py"

[tool.pdm.version]
source = "scm"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=8.2.2",
    "pyright~=1.1.370",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["A", "E", "F", "I", "N", "Q", "U", "T100"]

[tool.ruff.lint.isort]
known-first-party = ["upid"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["py"]
strict = ["py/**"]
reportUnnecessaryTypeIgnoreComment = true
pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "py/tests",
]
