[package]
name = "upid"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "Universally Unique Prefixed Lexicographically Sortable Identifier"
readme = "../README.md"
repository = "https://github.com/carderne/upid"

version = "0.0.999"  # set by Github Actions CI

edition = "2021"

[dependencies]
rand = { version = "0.8" }
uuid = { version = "1", optional = true }

[lib]
name = "upid"

[[bin]]
name = "upid"
path = "src/main.rs"
